[package]
name = "esp32-s3-led-couch"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[[bin]]
name = "esp32-s3-led-couch"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-println = { version = "0.15.0", features = ["esp32s3"] }
#ENDIF log-frontend || panic-handler || probe-rs
#IF option("esp-backtrace")
esp-backtrace = { version = "0.17.0", features = [
    #REPLACE esp32s3 mcu
    "esp32s3",
    "exception-handler",
    "panic-handler",
    #IF option("defmt")
    #+"defmt",
    #ELSE
    "println",
    #ENDIF
] }
panic-rtt-target = "0.2.0"
esp-alloc = "0.8.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-net = { version = "0.7.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
] }
#ENDIF wifi
esp-wifi = { version = "0.15.0", features = [
    "builtin-scheduler",
    "esp32s3",
    "wifi",
    "smoltcp",
    "esp-alloc",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["log"] }
static_cell = "2.1.1"
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
